--- a/ShopBankSolution.AdminApp/ShopBankSolution.AdminApp.csproj
+++ b/ShopBankSolution.AdminApp/ShopBankSolution.AdminApp.csproj
@@ -6,7 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.IdentityModel.Logging" Version="6.7.1" />
@@ -19,6 +18,21 @@
     <ProjectReference Include="..\ShopBankSolution.ApiIntegration\ShopBankSolution.ApiIntegration.csproj" />
     <ProjectReference Include="..\ShopBankSolution.Utilities\ShopBankSolution.Utilities.csproj" />
     <ProjectReference Include="..\ShopBankSolution.ViewModels\ShopBankSolution.ViewModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
