--- a/ShopBankSolution.WebApi/Properties/launchSettings.json
+++ b/ShopBankSolution.WebApi/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "eShopSolution.BackendApi": {
+    "ShopBankSolution.WebApi": {
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "swagger",
