--- a/ShopBankSolution.Webapp/Properties/launchSettings.json
+++ b/ShopBankSolution.Webapp/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -18,10 +18,11 @@
     "ShopBankSolution.Webapp": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "nativeDebugging": false,
+      "applicationUrl": "https://localhost:5003"
     }
   }
 }
